# polymarket-tools

./: .env.example  .gitignore  CLAUDE.md  DASHBOARD_USAGE.md  IMPLEMENTATION_PLAN.md  NEXT.md  Notes.md  PLAN.md  README.md  REQ_DOCS.md  TODO.md  check_connection.py  env.md  find_markets.py  first_trade.py  justfile  market_16100_tokens.json  market_data.md  pyproject.toml  requirements-dashboard.txt  run_dashboard.py  secrets.age  test.py  test_api_connection.py  testing.ipynb  tmp.ipynb  token_id.md
.claude/: CLAUDE.md
api/: __init__.py  polymarket_client.py
config/: _settings.py  encryption.py  generate_api_key.py  settings.py
core/: __init__.py  _check_connection.py  _find_markets.py  client.py  fill_tracker.py  first_trade.py  order_daemon.py  order_executor.py  persistence_subscriber.py  tools.py
dashboard/: README.md  app.py
docs/: BACKLOG.md  CONFIG.md  PHASE3_REVISED_PLAN.md  PRD.md  SECURITY.md  kelly_functions_guide.md  phase1.md  testing_market_monitor_guide.md
examples/: README.md  example1_run_monitors.py  example2_track_order.py  example3_kelly_micro_price_order.py  kelly_programmatic_example.py  phase1_demo.py  phase2_demo.py  phase3_demo.py  run_portfolio_monitor.py  simple_micro_price_daemon.py  test_monitor_api.py  test_phase3_demo.py
models/: __init__.py  enums.py  market.py  order.py  order_request.py  test_order.py
scripts/: run_dashboard.py
strategies/: kelly.py  micro_price.py  router.py  test_router.py
tests/: __init__.py  test_enums.py  test_examples.py  test_fill_tracker.py  test_iceberg.py  test_kelly.py  test_micro_price.py  (+8 more)
(+45 files in other folders)
